--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name=".TakePicture"
+            android:name=".NewAd"
             android:label="@string/title_activity_take_picture" >
         </activity>
     </application>
