--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compile 'com.google.android.gms:play-services:4.2.42'
     compile 'com.android.support:appcompat-v7:19.+'
     // You must install or update the Support Repository through the SDK manager to use this dependency.
+    compile 'com.github.gabrielemariotti.cards:library:1.9.1'
     compile 'com.android.support:support-v4:19.+'
     compile 'com.squareup.picasso:picasso:2.3.4'
+    compile 'info.hoang8f:fbutton:1.0.5'
 }
