change to rest API!!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,13 +31,11 @@ dependencies {
     compile 'com.android.support:support-v4:19.+'
     compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'info.hoang8f:fbutton:1.0.5'
-
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okio:okio:1.0.1'
-
-    compile 'com.amazonaws:aws-java-sdk:1.8.11'
-
-
+    //compile 'com.amazonaws:aws-java-sdk:1.8.11'
+    compile files('libs/aws-android-sdk-2.1.4-core.jar')
+    compile files('libs/aws-android-sdk-2.1.4-s3.jar')
 }
